--- a/egap.html
+++ b/egap.html
@@ -3,22 +3,24 @@
   <head>
     <title> git page... v1 </title>
       <script>
-        var bkm = {};
-          function http_get (url) {
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-              bkm = xhttp.responseText;
-            }
+       var bkm = {};
+         function http_get (url) {
+           var xhttp = new XMLHttpRequest();
+           xhttp.onreadystatechange = function() {
+           if (this.readyState == 4 && this.status == 200) {
+             bkm = xhttp.responseText;
+           }
           };
           xhttp.open("GET", url, true);
           xhttp.send();
         }
       </script>
 
-
   </head>
-  <body>
-    <p>git page...</p>
+  <body onload="http_get('https://otpaba.github.com/egap.json')">
+    <p id="x"></p>
+    <script>
+      document.getElementById("x").innerHTML = bkm;
+    </script>
   </body>
 </html>
