--- a/egap.html
+++ b/egap.html
@@ -19,10 +19,7 @@
       </script>
 
   </head>
-  <body>
+  <body onload="http_get (url)">
     <p id="x"></p>
-    <script>
-      http_get(url);
-    </script>
   </body>
 </html>
