--- a/egap.html
+++ b/egap.html
@@ -4,7 +4,7 @@
     <title> git page... v1 </title>
       <script>
         var bkm = {};
-        var url = 'https://otpaba.github.com/egap.json';
+        var url = 'https://api.github.com/repos/otpaba/otpaba.github.io/contents/egap.json';
           function http_get (url) {
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function() {
