--- a/egap.html
+++ b/egap.html
@@ -9,8 +9,8 @@
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
-              bkm = xhttp.responseText;
-              document.getElementById("x").innerHTML = bkm;
+              bkm = JSON.parse (xhttp.responseText);
+              document.getElementById("x").innerHTML = bkm.content;
             }
           };
           xhttp.open("GET", url, true);
